--- a/style.css
+++ b/style.css
@@ -335,7 +335,7 @@ header {
     padding: 5px 10px 0 0;
 }
 
-/*************/ /**********************/
+/*************/ /**********************/ /* CODE NOT MINE */
 
 #slider {
     position: relative;
@@ -504,3 +504,126 @@ header {
   .card button:hover {
     opacity: 0.7;
   }
+
+/****** HEADER *****/
+
+@media screen and (min-width: 1500px) {
+    header{
+        padding-left: 15% !important;
+        padding-right: 15% !important;
+    }
+}
+
+
+@media screen and (min-width: 800px) {
+    header{
+        padding-left: 11%;
+        padding-right: 11%;
+    }
+}
+
+
+
+header{
+    height: 48px;
+    transition: height 2s, padding 2s;
+
+}
+
+.topnav {
+    overflow: hidden;
+    background-color: #FFF;
+
+    color: #151414;
+
+    padding: 50px;
+}
+
+.topnav .navlist{
+    float: right;
+}
+
+.navlist{
+    /*transform: translateX(47px);*/
+    transition: transform 5s;
+}
+
+.navlist a {
+    float: left;
+    display: block;
+    color: #151414;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+}
+
+.navlist a:hover:not(:first-child) {
+    background-color: #ddd;
+    color: black;
+}
+
+.active {
+    background-color: #904A4E;
+    color: white;
+}
+
+.topnav a.icon {
+    position: absolute;
+    right: -47px;
+    transition: transform 3s;
+    top: 0px;
+}
+
+/* .logo{
+    height: 30px;
+    float: left;
+    padding: 9px;
+    padding-left: 3%;
+    padding-right: 3%;
+} */
+
+.cursor0{
+    cursor: default;
+}
+
+.navlist a:not(.icon){
+    display: block;
+    transition: transform 2s, opacity 1s, visibility 1s;
+}
+
+
+
+@media screen and (max-width: 600px) {
+
+    .navlist a:not(.icon) {
+        transform: translateX(500px);
+        opacity: 0;
+        visibility: hidden;
+    }
+
+    .topnav a.icon {
+        visibility: visible;
+        float: right;
+        transform: translateX(-47px);
+    }
+
+    .topnav.responsive {position: relative;}
+    .topnav.responsive .icon {
+        position: absolute;
+        top: 0;
+        transform: translateX(-47px);
+    }
+    .topnav.responsive a {
+        float: none;
+        display: block;
+        text-align: left;
+        transform: translateX(0px);
+        opacity: 1;
+        visibility: visible;
+    }
+
+    .topnav.responsive .navlist{
+        float: none;
+    }
+}
