--- a/style.css
+++ b/style.css
@@ -294,16 +294,19 @@ header {
     background: #FFF;
     color: #151414;
     /* color: #FFF; */
-
-
-
     overflow-y: hidden;
 
+}
+
+.context {
+    z-index: 5;
 }
 
 .context h3 {
     margin-bottom: 25px;
     background: ;
+
+    z-index: 5;
 }
 
 .service:nth-child(odd) {
@@ -332,6 +335,7 @@ header {
 
 .service__picture {
     width: 20px;
+    z-index: 7;
 }
 
 .context {
@@ -341,6 +345,8 @@ header {
 
 .picture {
     flex: 1;
+
+    z-index: 5;
 }
 
 .picture img {
@@ -381,6 +387,16 @@ header {
 
     opacity: 0.1;
     
+    z-index: 1;
+}
+
+.service__test {
+    position: absolute;
+    right: 0;
+
+    height: 100%;
+
+    opacity: 0.2;
 }
 
 /** SECTION B **/
@@ -403,6 +419,32 @@ header {
 }
 
 /** SECTION C **/
+
+
+
+/** BRANDS **/
+
+.brands {
+    text-align: center;
+}
+
+.brands h1 {
+    margin-bottom: 40px;
+}
+
+.brands__row {
+
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    padding: 0 150px;
+
+}
+
+.brands__logo {
+    width: 150px;
+}
 
 /** FOOTER **/
 
