--- a/style.css
+++ b/style.css
@@ -425,6 +425,9 @@ header {
 /** BRANDS **/
 
 .brands {
+
+    background: #000;
+
     text-align: center;
 }
 
@@ -435,15 +438,15 @@ header {
 .brands__row {
 
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
 
-    padding: 0 150px;
+    padding: 0 140px;
 
 }
 
 .brands__logo {
-    width: 150px;
+    width: 80px;
 }
 
 /** FOOTER **/
